# gtic

./: README.md  pyproject.toml
examples/wrangell/: diurnal_insolation.py  monthly_insolation.py
gtic/: __init__.py  solar_potential.py
gtic/cuda/: azimuth_trace.cu
