[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gtic"
version = "0.1.0"
description = "GPU-accelerated topographic insolation calculator"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"
authors = [
    { name = "glide-ism" },
]
dependencies = [
    "numpy",
    "xarray",
    "pysolar",
    "pytz",
    "tqdm",
]

[project.optional-dependencies]
# CuPy ships a separate binary wheel per CUDA major version, with no universal
# wheel. Install the extra matching your CUDA toolkit, e.g. `pip install gtic[cuda12]`.
cuda11 = ["cupy-cuda11x>=12.0.0"]
cuda12 = ["cupy-cuda12x>=12.0.0"]
cuda13 = ["cupy-cuda13x>=13.0.0"]
examples = [
    "matplotlib",
    "netCDF4",
]

[project.urls]
Repository = "https://github.com/glide-ism/gtic"

[tool.setuptools.packages.find]
include = ["gtic*"]

[tool.setuptools.package-data]
"gtic" = ["cuda/*.cu"]
